added an test database to populate

--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -1,12 +1,13 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Data Source=SchoolContext-39358ddb-ed3f-4444-a820-fb45c220f298.db"
-  }
+    "SchoolContextSQLite": "Data Source=CU.db"
+  },
+  "MyMaxModelBindingCollectionSize": "3"
 }
